Layout shift fix

--- a/front/features/products/listing/comps/product_listing_body.module.scss
+++ b/front/features/products/listing/comps/product_listing_body.module.scss
@@ -42,6 +42,10 @@
 
     margin: 0 1rem;
     margin-left: 0;
+
+    .products {
+      height: 5200px;
+    }
   }
 
   .no_products {
